# MCPxy

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  config.example.json  docker-compose.yml  pyproject.toml
deploy/docker/: config.json  entrypoint.sh
docs/: Design.md  admin-guide.md  architecture.md  auth.md  configuration.md  development.md  policies.md  troubleshooting.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/api/: client.ts  sse.ts  types.ts
frontend/src/components/: AddManuallyDialog.tsx  Badge.tsx  Card.tsx  LoginGate.tsx  Sidebar.tsx  TrafficGraph.tsx
frontend/src/pages/: Browse.tsx  Config.tsx  Connect.tsx  Graph.tsx  Import.tsx  Logs.tsx  Onboarding.tsx  Overview.tsx  Policies.tsx  Routes.tsx  TokenMappings.tsx  Tokens.tsx  Traffic.tsx  Users.tsx
src/mcp_proxy/: __init__.py  cli.py  config.py  jsonrpc.py  logging.py  routing.py  runtime.py  secrets.py  server.py  stdio_adapter.py  tls.py
src/mcp_proxy/auth/: __init__.py  oauth.py  strategies.py
src/mcp_proxy/authn/: __init__.py  manager.py  middleware.py  users.py
src/mcp_proxy/data/: __init__.py
src/mcp_proxy/discovery/: __init__.py  catalog.py  importers.py  registration.py
src/mcp_proxy/install/: __init__.py  clients.py
src/mcp_proxy/observability/: __init__.py  discovery.py  traffic.py
src/mcp_proxy/plugins/: registry.py
src/mcp_proxy/policy/: __init__.py  engine.py  redaction.py
src/mcp_proxy/proxy/: __init__.py  admin.py  base.py  bridge.py  http.py  manager.py  stdio.py
src/mcp_proxy/storage/: __init__.py  bootstrap.py  config_store.py  db.py  schema.py
src/mcp_proxy/telemetry/: http_sink.py  noop_sink.py  pipeline.py
src/mcpxy_proxy/: cli.py  config.py  routing.py  runtime.py  secrets.py  server.py  stdio_adapter.py  tls.py
src/mcpxy_proxy/auth/: __init__.py  oauth.py  strategies.py
src/mcpxy_proxy/authn/: __init__.py  manager.py  middleware.py  users.py
tests/: conftest.py  test_admin_auth.py  test_admin_ui_api.py  test_admin_ui_auth.py  test_admin_ui_dist.py  test_atomic_apply_rollback.py  test_authn_invites.py  test_authn_pats.py  test_authn_users.py  test_bridge_and_restart.py  test_bridge_instrumentation.py  test_bridge_shutdown_sync.py  test_catalog.py  test_cli.py  test_cli_discovery.py  test_cli_install.py  test_config.py  test_config_authy.py  test_hot_reload.py  test_http_auth_static.py  test_http_upstream_tls.py  test_importers.py  test_install_clients.py  test_install_endpoint.py  test_manual_upstream_add.py  test_oauth_endpoints.py  test_oauth_flow.py  test_onboarding.py  test_overload_handling.py  test_plugin_discovery.py  test_plugins.py  test_policy_endpoints.py  test_policy_engine.py  test_redaction.py  test_redaction_policy.py  test_registration_service.py  test_registry_endpoints.py  test_route_discovery.py  test_routing_precedence.py  test_schema_v2.py  (+14 more)
(+29 files in other folders)
