[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcpy-proxy"
version = "0.1.0"
description = "Production-ready multi-upstream MCP proxy with admin MCP interface and telemetry pipeline."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "project maintainers" }
]
keywords = ["mcp", "json-rpc", "proxy", "fastapi", "telemetry"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Framework :: FastAPI",
  "Topic :: Internet :: Proxy Servers"
]
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn>=0.29.0",
  "httpx>=0.27.0",
  "pydantic>=2.6.0",
  # Fernet-backed encryption for the first-class secrets store
  # (src/mcp_proxy/secrets.py) used for upstream credentials and
  # OAuth tokens at rest.
  "cryptography>=42.0",
  # Persistent config + secrets store. SQLAlchemy Core (no ORM) gives us
  # a database-agnostic surface so operators can point MCPY_DB_URL at
  # any SQLAlchemy-supported backend — or configure it from the
  # onboarding wizard, which writes <state_dir>/bootstrap.json that
  # ``cli.build_state`` reads before opening the engine.
  #
  # The default sqlite:///<state_dir>/mcpy.db uses the stdlib sqlite3
  # driver and always works out of the box. Postgres and MySQL live
  # behind the ``[postgres]`` / ``[mysql]`` optional extras below so
  # we don't force operators on the SQLite path to pull heavyweight
  # compiled drivers they don't need.
  "sqlalchemy>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.4.0",
  "mypy>=1.8.0",
]
# Installing ``mcpy-proxy[postgres]`` makes the onboarding wizard
# offer "PostgreSQL" as a backend option — the driver probe in
# ``mcp_proxy.storage.db.available_dialects`` looks for ``psycopg2``.
postgres = [
  "psycopg2-binary>=2.9",
]
# Same story for MySQL / MariaDB — the probe looks for ``pymysql``.
mysql = [
  "PyMySQL>=1.1",
]

[project.scripts]
# CLI usage: mcp-proxy serve --config <path> --listen <host:port>
mcp-proxy = "mcp_proxy.cli:main"

[project.entry-points."mcp_proxy.upstreams"]
stdio = "mcp_proxy.proxy.stdio:StdioUpstreamTransport"
http = "mcp_proxy.proxy.http:HttpUpstreamTransport"

[project.entry-points."mcp_proxy.telemetry_sinks"]
http = "mcp_proxy.telemetry.http_sink:HttpTelemetrySink"
noop = "mcp_proxy.telemetry.noop_sink:NoopTelemetrySink"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mcp_proxy = [
  "web/templates/*.html",
  "web/static/*",
  "web/dist/*",
  "web/dist/**/*",
  "data/*.json",
]
